[gd_scene load_steps=12 format=3 uid="uid://dk3j16ukdj05c"]

[ext_resource type="Theme" uid="uid://cfp22mav71a3h" path="res://Utility/Options/options_menu_theme.tres" id="1_6a5b4"]
[ext_resource type="Script" uid="uid://ckfoe5jk4g1yq" path="res://Utility/Keybinds/keybind_menu.gd" id="1_scwt4"]
[ext_resource type="Script" path="res://Utility/button_focus.gd" id="3_4mes7"]
[ext_resource type="Texture2D" path="res://Utility/Assets/check_button_on_10x10.png" id="5_d2ggg"]
[ext_resource type="PackedScene" uid="uid://b78cnhx6y1bcq" path="res://Utility/Keybinds/keybind_container.tscn" id="7_jsfnp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xeqot"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbdwv"]
bg_color = Color(0.0737847, 0.235189, 0.442708, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 4
anti_aliasing = false

[sub_resource type="StyleBoxLine" id="StyleBoxLine_d2ggg"]
color = Color(0.498039, 0.498039, 0.498039, 1)
grow_begin = 20.0
grow_end = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1b51u"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="FontVariation" id="FontVariation_ento0"]

[sub_resource type="FontVariation" id="FontVariation_d2ggg"]

[node name="KeybindMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6a5b4")
script = ExtResource("1_scwt4")
is_using_addon = true
metadata/_edit_lock_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(310, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -283.0
offset_right = 208.0
offset_bottom = 283.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xeqot")

[node name="Menu" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Menu"]
layout_mode = 2

[node name="Title" type="MarginContainer" parent="PanelContainer/Menu/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.15
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10

[node name="Panel" type="Panel" parent="PanelContainer/Menu/VBoxContainer/Title"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tbdwv")

[node name="Label" type="Label" parent="PanelContainer/Menu/VBoxContainer/Title"]
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"LabelTitle"
theme_override_font_sizes/font_size = 50
text = "Controls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/Menu/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="ColumnNames" type="HBoxContainer" parent="PanelContainer/Menu/VBoxContainer"]
clip_contents = true
layout_mode = 2

[node name="Spacer" type="Control" parent="PanelContainer/Menu/VBoxContainer/ColumnNames"]
layout_mode = 2
size_flags_horizontal = 3

[node name="KeyboardLabel" type="Label" parent="PanelContainer/Menu/VBoxContainer/ColumnNames"]
layout_mode = 2
size_flags_horizontal = 3
text = "Keyboard"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Spacer2" type="Control" parent="PanelContainer/Menu/VBoxContainer/ColumnNames"]
visible = false
custom_minimum_size = Vector2(33, 0)
layout_mode = 2

[node name="GamepadLabel" type="Label" parent="PanelContainer/Menu/VBoxContainer/ColumnNames"]
layout_mode = 2
size_flags_horizontal = 3
text = "Controller"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Spacer3" type="Control" parent="PanelContainer/Menu/VBoxContainer/ColumnNames"]
visible = false
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="ControlsScrollContainer" type="ScrollContainer" parent="PanelContainer/Menu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
scroll_vertical_custom_step = 40.0
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/Menu/VBoxContainer/ControlsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 0

[node name="Controls" type="VBoxContainer" parent="PanelContainer/Menu/VBoxContainer/ControlsScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/Menu/VBoxContainer/ControlsScrollContainer/MarginContainer/Controls"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/separator = SubResource("StyleBoxLine_d2ggg")

[node name="HBoxContainer" parent="PanelContainer/Menu/VBoxContainer/ControlsScrollContainer/MarginContainer/Controls" instance=ExtResource("7_jsfnp")]
layout_mode = 2
size_flags_horizontal = 1
label_name = "Move Up"
action_name = "move_up"

[node name="HBoxContainer2" parent="PanelContainer/Menu/VBoxContainer/ControlsScrollContainer/MarginContainer/Controls" instance=ExtResource("7_jsfnp")]
layout_mode = 2
size_flags_horizontal = 1
label_name = "Move Down"
action_name = "move_down"

[node name="HBoxContainer3" parent="PanelContainer/Menu/VBoxContainer/ControlsScrollContainer/MarginContainer/Controls" instance=ExtResource("7_jsfnp")]
layout_mode = 2
size_flags_horizontal = 1
label_name = "Move Left"
action_name = "move_left"

[node name="HBoxContainer4" parent="PanelContainer/Menu/VBoxContainer/ControlsScrollContainer/MarginContainer/Controls" instance=ExtResource("7_jsfnp")]
layout_mode = 2
size_flags_horizontal = 1
label_name = "Move Right"
action_name = "move_right"

[node name="HBoxContainer5" parent="PanelContainer/Menu/VBoxContainer/ControlsScrollContainer/MarginContainer/Controls" instance=ExtResource("7_jsfnp")]
layout_mode = 2
size_flags_horizontal = 1

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/Menu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ResetBtn" type="Button" parent="PanelContainer/Menu/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Reset"
script = ExtResource("3_4mes7")

[node name="BackBtn" type="Button" parent="PanelContainer/Menu/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "Back"
script = ExtResource("3_4mes7")

[node name="ResetMenu" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResetPanel" type="PanelContainer" parent="ResetMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -57.0
offset_right = 201.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1b51u")

[node name="VBoxContainer" type="VBoxContainer" parent="ResetMenu/ResetPanel"]
layout_mode = 2
alignment = 1

[node name="ResetConfirm" type="Label" parent="ResetMenu/ResetPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Reset keybinds to default?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ResetMenu/ResetPanel/VBoxContainer"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="ConfirmReset" type="Button" parent="ResetMenu/ResetPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../CancelReset")
focus_neighbor_top = NodePath("../CancelReset")
focus_neighbor_right = NodePath("../CancelReset")
focus_neighbor_bottom = NodePath("../CancelReset")
focus_next = NodePath("../CancelReset")
focus_previous = NodePath("../CancelReset")
theme_override_fonts/font = SubResource("FontVariation_ento0")
theme_override_font_sizes/font_size = 40
text = "Yes"
script = ExtResource("3_4mes7")

[node name="CancelReset" type="Button" parent="ResetMenu/ResetPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../ConfirmReset")
focus_neighbor_top = NodePath("../ConfirmReset")
focus_neighbor_right = NodePath("../ConfirmReset")
focus_neighbor_bottom = NodePath("../ConfirmReset")
focus_next = NodePath("../ConfirmReset")
focus_previous = NodePath("../ConfirmReset")
theme_override_fonts/font = SubResource("FontVariation_d2ggg")
theme_override_font_sizes/font_size = 40
text = "no"
script = ExtResource("3_4mes7")

[node name="RebindTooltip" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -220.0
offset_right = 190.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_1b51u")

[node name="VBoxContainer" type="VBoxContainer" parent="RebindTooltip"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="RebindTooltip/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="RebindTooltip/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelTitle"
text = "Reset: Backspace"

[node name="KeyTexture" type="TextureRect" parent="RebindTooltip/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_d2ggg")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="RebindTooltip/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="RebindTooltip/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_type_variation = &"LabelTitle"
text = "Erase: BracketRight"

[node name="KeyTexture" type="TextureRect" parent="RebindTooltip/VBoxContainer/HBoxContainer2"]
visible = false
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_d2ggg")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer3" type="HBoxContainer" parent="RebindTooltip/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="RebindTooltip/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_type_variation = &"LabelTitle"
text = "Cancel: Escape / RMB"

[node name="KeyTexture" type="TextureRect" parent="RebindTooltip/VBoxContainer/HBoxContainer3"]
visible = false
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_d2ggg")
expand_mode = 1
stretch_mode = 5

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
